typescript/checker/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName9.ts.stderr
error: TS1166 {
    span: Span {
        lo: BytePos(
            28,
        ),
        hi: BytePos(
            37,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName9.ts:3:4
  |
3 |    [e]: Type
  |    ^^^^^^^^^

error: UndefinedSymbol {
    sym: Atom('e' type=inline),
    span: Span {
        lo: BytePos(
            29,
        ),
        hi: BytePos(
            30,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName9.ts:3:5
  |
3 |    [e]: Type
  |     ^

error: NameNotFound {
    span: Span {
        lo: BytePos(
            33,
        ),
        hi: BytePos(
            37,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName9.ts:3:9
  |
3 |    [e]: Type
  |         ^^^^

